--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,19 @@
     "dependencies": {
         "@apollo/client": "^3.12.3",
         "graphql": "^16.10.0",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^7.0.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.15.0",
+        "@graphql-codegen/cli": "^5.0.3",
+        "@graphql-codegen/typescript-graphql-request": "^6.2.0",
+        "@graphql-codegen/typescript-operations": "^4.4.0",
+        "@graphql-codegen/typescript-react-apollo": "^4.3.2",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
+        "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react": "^4.3.4",
         "eslint": "^9.15.0",
         "eslint-plugin-react-hooks": "^5.0.0",
@@ -27,10 +33,6 @@
         "globals": "^15.12.0",
         "typescript": "~5.6.2",
         "typescript-eslint": "^8.15.0",
-        "@graphql-codegen/cli": "^5.0.3",
-        "@graphql-codegen/typescript-graphql-request": "^6.2.0",
-        "@graphql-codegen/typescript-operations": "^4.4.0",
-        "@graphql-codegen/typescript-react-apollo": "^4.3.2",
         "vite": "^6.0.1"
     }
 }
