--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@apollo/client": "^3.12.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
