--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "graphql": "^16.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2",
     "tailwindcss": "^4.0.0-beta.7"
   },
   "devDependencies": {
