--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,10 @@ services:
 
   frontend:
     environment:
-      - WDS_SOCKET_HOST=127.0.0.1
       - CHOKIDAR_USEPOLLING=true
-      - WATCHPACK_POLLING=true=value
+      - WATCHPACK_POLLING=true
+      - VITE_DEV_SERVER_HOST=0.0.0.0
+    command: ["npm", "run", "dev", "--", "--host"]
     stop_grace_period: 0s
     build:
       context: ./client
