--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,7 +9,10 @@ RUN npm i
 COPY src ./src
 COPY tsconfig.json ./tsconfig.json
 
+
 ARG NEXT_PUBLIC_GRAPHQL_API_URL
 ENV NEXT_PUBLIC_GRAPHQL_API_URL ${NEXT_PUBLIC_GRAPHQL_API_URL}
+
+EXPOSE 4000
 
 CMD npm run dev
