--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,13 @@ services:
       - 5173:5173
     volumes:
       - ./client/src:/app/src
+
+  gateway:
+    image: nginx
+    ports:
+      - 5050:80
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - backend
+      - frontend
