--- a/backend/package.json
+++ b/backend/package.json
@@ -12,18 +12,20 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.2",
-    "reflect-metadata": "^0.2.2",
-    "sqlite3": "^5.1.7",
-    "type-graphql": "^2.0.0-beta.6",
-    "typeorm": "^0.3.20",
+    "@types/node": "^22.10.2",
+    "class-validator": "0.14.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "class-validator": "0.14.1",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
+    "ts-node": "^10.9.2",
+    "type-graphql": "^2.0.0-beta.6",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@types/cors": "2.8.17",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.7.2"
   }
 }
