--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "@mui/material": "^6.2.0",
     "graphql": "^16.10.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
