--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,19 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "codegen": "graphql-codegen --config codegen-config.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.12.3",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.0",
+    "@graphql-codegen/cli": "^5.0.3",
+    "@graphql-codegen/named-operations-object": "^3.1.0",
+    "@graphql-codegen/typescript-graphql-request": "^6.2.0",
+    "@graphql-codegen/typescript-operations": "^4.4.0",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
     "@mui/material": "^6.2.0",
     "graphql": "^16.10.0",
     "react": "^18.3.1",
