--- a/client/package.json
+++ b/client/package.json
@@ -8,24 +8,23 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "format": "prettier --write '*/**/*.{js,jsx,ts,tsx}'",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.12.3",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@fontsource/roboto": "^5.1.0",
-    "@mui/material": "^6.2.0",
-    "@mui/styled-engine-sc": "^6.2.0",
+    "@graphql-codegen/typescript-graphql-request": "^6.2.0",
+    "@graphql-codegen/typescript-operations": "^4.4.0",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
     "@types/react-router-dom": "^5.3.3",
     "graphql": "^16.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2",
-    "styled-components": "^6.1.13"
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@graphql-codegen/cli": "^5.0.3",
     "@types/cors": "^2.8.17",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
