--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,4 +22,5 @@ services:
     ports:
       - 5173:5173
     volumes:
-      - ./client/src:/app/src
+      - ./client/:/app/
+      - /app/node_modules
